--- a/style/style.css
+++ b/style/style.css
@@ -300,19 +300,19 @@ input::placeholder {
     #app {
         width: 100%;
         overflow-x: hidden;     
-        overflow-y: hidden; 
+        
     }
 
     .tit-law img{
-        width: 400px;
+        width: 200px;
     }
     
     img{
-        width:400px;
+        width:300px;
     }
 
     .txt-desc{
-        width:400px;
+        width:300px;
     }
 
     .txt-desc{
@@ -345,22 +345,32 @@ input::placeholder {
     }
 
 
-    button {
-         width: 270px;
+    .cont-inp .btn-exc {
+         width: 280px;
+         font-size: 15px;
+         
     }
+
+    .cont-inp .btn-exc::after {
+        display: none;
+    }
+
 
     .cont-result {
         margin: 0 20px;
-        display: flex;
+        display: none;
         font-size: 16px;
+        flex-direction: column;
     }
 
     .cont-result .txt-wannabe .field-result{
-        font-size: 30px;
+        font-size: 25px;
     }
     .cont-result .txt-wannabe .time-result{
-        font-size: 30px;
+        font-size: 20px;
     }
+
+
 
     .cont-result button{
         margin: 10px;
@@ -368,6 +378,25 @@ input::placeholder {
 
     .cont-footer{
         margin-top: 20px;
+        font-size: 10px;
+    }
+
+    #modal .modal_wrap {
+        width: 300px;
+        height: 350px;
+    }
+
+    #modal .tit-modal{
+        font-size: 30px;
+    }
+
+    #modal .cont-modal{
+        font-size: 15px;
+    }
+
+    #modal .btn-close{
+        padding: 10px;
+        font-size: 15px;
     }
 
 
